# mdedit

./: .gitignore  IMPLEMENTATION_PLAN_v2.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: transparentize_icon.py
src/: actions.ts  editor.ts  i18n.ts  image-edit.ts  image-resolver.ts  line-numbers.ts  main.ts  modal.ts  settings-modal.ts  settings.ts  shortcuts.ts  store.ts  style.css  tabs.ts  title.ts  toolbar.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  i18n.rs  lib.rs  main.rs  menu.rs  recent.rs  startup.rs
